{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 294,
  "lineage": "ca349b3c-1806-567d-e2fb-008b87b09866",
  "resources": [
    {
      "module": "module.VPC_module.module.aws_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:072026222177:internet-gateway/igw-03f1027ca98848b97",
            "id": "igw-03f1027ca98848b97",
            "owner_id": "072026222177",
            "tags": {
              "name": "vpc_default"
            },
            "tags_all": {
              "Environment": "default",
              "Terraform": "true",
              "name": "vpc_default"
            },
            "vpc_id": "vpc-070dd296fe3fbcd50"
          },
          "dependencies": [
            "module.VPC_module.module.aws_vpc.aws_vpc.this",
            "module.VPC_module.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_module.module.aws_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03f1027ca98848b97",
            "id": "r-rtb-03e58277e10c106351080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03e58277e10c10635",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC_module.module.aws_vpc.aws_internet_gateway.this",
            "module.VPC_module.module.aws_vpc.aws_route_table.public",
            "module.VPC_module.module.aws_vpc.aws_vpc.this",
            "module.VPC_module.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_module.module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:072026222177:route-table/rtb-02f7cebd8c59bcd2d",
            "id": "rtb-02f7cebd8c59bcd2d",
            "owner_id": "072026222177",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "-private-eu-west-3a",
              "name": "vpc_default"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "-private-eu-west-3a",
              "Terraform": "true",
              "name": "vpc_default"
            },
            "timeouts": null,
            "vpc_id": "vpc-070dd296fe3fbcd50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC_module.module.aws_vpc.aws_vpc.this",
            "module.VPC_module.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:072026222177:route-table/rtb-0b06e711a1d713435",
            "id": "rtb-0b06e711a1d713435",
            "owner_id": "072026222177",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "-private-eu-west-3b",
              "name": "vpc_default"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "-private-eu-west-3b",
              "Terraform": "true",
              "name": "vpc_default"
            },
            "timeouts": null,
            "vpc_id": "vpc-070dd296fe3fbcd50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC_module.module.aws_vpc.aws_vpc.this",
            "module.VPC_module.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_module.module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:072026222177:route-table/rtb-03e58277e10c10635",
            "id": "rtb-03e58277e10c10635",
            "owner_id": "072026222177",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "-public",
              "name": "vpc_default"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "-public",
              "Terraform": "true",
              "name": "vpc_default"
            },
            "timeouts": null,
            "vpc_id": "vpc-070dd296fe3fbcd50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC_module.module.aws_vpc.aws_vpc.this",
            "module.VPC_module.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_module.module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a537dc0faec24ddc",
            "route_table_id": "rtb-02f7cebd8c59bcd2d",
            "subnet_id": "subnet-052de97e131e9efa4"
          },
          "dependencies": [
            "module.VPC_module.module.aws_vpc.aws_route_table.private",
            "module.VPC_module.module.aws_vpc.aws_subnet.private",
            "module.VPC_module.module.aws_vpc.aws_vpc.this",
            "module.VPC_module.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd6e18298d89d4d6",
            "route_table_id": "rtb-0b06e711a1d713435",
            "subnet_id": "subnet-05c5fe0223463b490"
          },
          "dependencies": [
            "module.VPC_module.module.aws_vpc.aws_route_table.private",
            "module.VPC_module.module.aws_vpc.aws_subnet.private",
            "module.VPC_module.module.aws_vpc.aws_vpc.this",
            "module.VPC_module.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_module.module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ddb4ee90653bf1b",
            "route_table_id": "rtb-03e58277e10c10635",
            "subnet_id": "subnet-06a56f374416c913d"
          },
          "dependencies": [
            "module.VPC_module.module.aws_vpc.aws_route_table.public",
            "module.VPC_module.module.aws_vpc.aws_subnet.public",
            "module.VPC_module.module.aws_vpc.aws_vpc.this",
            "module.VPC_module.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b82212af2c72370",
            "route_table_id": "rtb-03e58277e10c10635",
            "subnet_id": "subnet-0b2311413de891e3f"
          },
          "dependencies": [
            "module.VPC_module.module.aws_vpc.aws_route_table.public",
            "module.VPC_module.module.aws_vpc.aws_subnet.public",
            "module.VPC_module.module.aws_vpc.aws_vpc.this",
            "module.VPC_module.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_module.module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:072026222177:subnet/subnet-052de97e131e9efa4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052de97e131e9efa4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "072026222177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "-private-eu-west-3a",
              "name": "vpc_default"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "-private-eu-west-3a",
              "Terraform": "true",
              "name": "vpc_default"
            },
            "vpc_id": "vpc-070dd296fe3fbcd50"
          },
          "dependencies": [
            "module.VPC_module.module.aws_vpc.aws_vpc.this",
            "module.VPC_module.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:072026222177:subnet/subnet-05c5fe0223463b490",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c5fe0223463b490",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "072026222177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "-private-eu-west-3b",
              "name": "vpc_default"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "-private-eu-west-3b",
              "Terraform": "true",
              "name": "vpc_default"
            },
            "vpc_id": "vpc-070dd296fe3fbcd50"
          },
          "dependencies": [
            "module.VPC_module.module.aws_vpc.aws_vpc.this",
            "module.VPC_module.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_module.module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:072026222177:subnet/subnet-06a56f374416c913d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a56f374416c913d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "072026222177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "-public-eu-west-3a",
              "name": "vpc_default"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "-public-eu-west-3a",
              "Terraform": "true",
              "name": "vpc_default"
            },
            "vpc_id": "vpc-070dd296fe3fbcd50"
          },
          "dependencies": [
            "module.VPC_module.module.aws_vpc.aws_vpc.this",
            "module.VPC_module.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:072026222177:subnet/subnet-0b2311413de891e3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2311413de891e3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "072026222177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "-public-eu-west-3b",
              "name": "vpc_default"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "-public-eu-west-3b",
              "Terraform": "true",
              "name": "vpc_default"
            },
            "vpc_id": "vpc-070dd296fe3fbcd50"
          },
          "dependencies": [
            "module.VPC_module.module.aws_vpc.aws_vpc.this",
            "module.VPC_module.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_module.module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:072026222177:vpc/vpc-070dd296fe3fbcd50",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-01324624071cc089a",
            "default_route_table_id": "rtb-08b588332ebfe22d2",
            "default_security_group_id": "sg-0a34bac3f48797070",
            "dhcp_options_id": "dopt-06c4ae3c1f0e9c508",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-070dd296fe3fbcd50",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08b588332ebfe22d2",
            "owner_id": "072026222177",
            "tags": {
              "name": "vpc_default"
            },
            "tags_all": {
              "Environment": "default",
              "Terraform": "true",
              "name": "vpc_default"
            }
          }
        }
      ]
    },
    {
      "module": "module.bastion_module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0960de83329d12f2f",
            "arn": "arn:aws:ec2:eu-west-3:072026222177:instance/i-065777d84908e2e52",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "bastion_profile",
            "id": "i-065777d84908e2e52",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-094356f1ae37a1228",
            "private_dns": "ip-10-1-2-192.eu-west-3.compute.internal",
            "private_ip": "10.1.2.192",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-090e972918a6e4723",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-052de97e131e9efa4",
            "tags": {
              "Name": "Bastion_Host-default"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "Bastion_Host-default",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06b5d5b416e44a674"
            ]
          },
          "dependencies": [
            "module.VPC_module.module.aws_vpc.aws_cloudwatch_log_group.flow_log",
            "module.VPC_module.module.aws_vpc.aws_customer_gateway.this",
            "module.VPC_module.module.aws_vpc.aws_db_subnet_group.database",
            "module.VPC_module.module.aws_vpc.aws_default_network_acl.this",
            "module.VPC_module.module.aws_vpc.aws_default_route_table.default",
            "module.VPC_module.module.aws_vpc.aws_default_security_group.this",
            "module.VPC_module.module.aws_vpc.aws_default_vpc.this",
            "module.VPC_module.module.aws_vpc.aws_egress_only_internet_gateway.this",
            "module.VPC_module.module.aws_vpc.aws_eip.nat",
            "module.VPC_module.module.aws_vpc.aws_elasticache_subnet_group.elasticache",
            "module.VPC_module.module.aws_vpc.aws_flow_log.this",
            "module.VPC_module.module.aws_vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.VPC_module.module.aws_vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.VPC_module.module.aws_vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.VPC_module.module.aws_vpc.aws_internet_gateway.this",
            "module.VPC_module.module.aws_vpc.aws_nat_gateway.this",
            "module.VPC_module.module.aws_vpc.aws_network_acl.database",
            "module.VPC_module.module.aws_vpc.aws_network_acl.elasticache",
            "module.VPC_module.module.aws_vpc.aws_network_acl.intra",
            "module.VPC_module.module.aws_vpc.aws_network_acl.outpost",
            "module.VPC_module.module.aws_vpc.aws_network_acl.private",
            "module.VPC_module.module.aws_vpc.aws_network_acl.public",
            "module.VPC_module.module.aws_vpc.aws_network_acl.redshift",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.database_inbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.database_outbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.elasticache_inbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.elasticache_outbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.intra_inbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.intra_outbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.outpost_inbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.outpost_outbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.private_inbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.private_outbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.public_inbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.public_outbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.redshift_inbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.redshift_outbound",
            "module.VPC_module.module.aws_vpc.aws_redshift_subnet_group.redshift",
            "module.VPC_module.module.aws_vpc.aws_route.database_internet_gateway",
            "module.VPC_module.module.aws_vpc.aws_route.database_ipv6_egress",
            "module.VPC_module.module.aws_vpc.aws_route.database_nat_gateway",
            "module.VPC_module.module.aws_vpc.aws_route.private_ipv6_egress",
            "module.VPC_module.module.aws_vpc.aws_route.private_nat_gateway",
            "module.VPC_module.module.aws_vpc.aws_route.public_internet_gateway",
            "module.VPC_module.module.aws_vpc.aws_route.public_internet_gateway_ipv6",
            "module.VPC_module.module.aws_vpc.aws_route_table.database",
            "module.VPC_module.module.aws_vpc.aws_route_table.elasticache",
            "module.VPC_module.module.aws_vpc.aws_route_table.intra",
            "module.VPC_module.module.aws_vpc.aws_route_table.private",
            "module.VPC_module.module.aws_vpc.aws_route_table.public",
            "module.VPC_module.module.aws_vpc.aws_route_table.redshift",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.database",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.elasticache",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.intra",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.outpost",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.private",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.public",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.redshift",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.redshift_public",
            "module.VPC_module.module.aws_vpc.aws_subnet.database",
            "module.VPC_module.module.aws_vpc.aws_subnet.elasticache",
            "module.VPC_module.module.aws_vpc.aws_subnet.intra",
            "module.VPC_module.module.aws_vpc.aws_subnet.outpost",
            "module.VPC_module.module.aws_vpc.aws_subnet.private",
            "module.VPC_module.module.aws_vpc.aws_subnet.public",
            "module.VPC_module.module.aws_vpc.aws_subnet.redshift",
            "module.VPC_module.module.aws_vpc.aws_vpc.this",
            "module.VPC_module.module.aws_vpc.aws_vpc_dhcp_options.this",
            "module.VPC_module.module.aws_vpc.aws_vpc_dhcp_options_association.this",
            "module.VPC_module.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.VPC_module.module.aws_vpc.aws_vpn_gateway.this",
            "module.VPC_module.module.aws_vpc.aws_vpn_gateway_attachment.this",
            "module.VPC_module.module.aws_vpc.aws_vpn_gateway_route_propagation.intra",
            "module.VPC_module.module.aws_vpc.aws_vpn_gateway_route_propagation.private",
            "module.VPC_module.module.aws_vpc.aws_vpn_gateway_route_propagation.public",
            "module.VPC_module.module.aws_vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.VPC_module.module.aws_vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.iam_module.aws_iam_instance_profile.bastion_profile",
            "module.iam_module.aws_iam_policy_attachment.EC2_role_for_ssm",
            "module.iam_module.aws_iam_policy_attachment.ssm_managed_instance_core",
            "module.iam_module.aws_iam_role.bastion_role",
            "module.security_groups_module.aws_security_group.Security_Group_bastion",
            "module.security_groups_module.aws_security_group_rule.allow_all_outbound_traffic"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway_module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastionEIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-026383e17c653ce80",
            "association_id": "eipassoc-02066563ccdc3952b",
            "domain": "vpc",
            "id": "eipalloc-026383e17c653ce80",
            "instance": "i-065777d84908e2e52",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-094356f1ae37a1228",
            "private_dns": "ip-10-1-2-192.eu-west-3.compute.internal",
            "private_ip": "10.1.2.192",
            "public_dns": "ec2-15-188-231-104.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.188.231.104",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.VPC_module.module.aws_vpc.aws_cloudwatch_log_group.flow_log",
            "module.VPC_module.module.aws_vpc.aws_customer_gateway.this",
            "module.VPC_module.module.aws_vpc.aws_db_subnet_group.database",
            "module.VPC_module.module.aws_vpc.aws_default_network_acl.this",
            "module.VPC_module.module.aws_vpc.aws_default_route_table.default",
            "module.VPC_module.module.aws_vpc.aws_default_security_group.this",
            "module.VPC_module.module.aws_vpc.aws_default_vpc.this",
            "module.VPC_module.module.aws_vpc.aws_egress_only_internet_gateway.this",
            "module.VPC_module.module.aws_vpc.aws_eip.nat",
            "module.VPC_module.module.aws_vpc.aws_elasticache_subnet_group.elasticache",
            "module.VPC_module.module.aws_vpc.aws_flow_log.this",
            "module.VPC_module.module.aws_vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.VPC_module.module.aws_vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.VPC_module.module.aws_vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.VPC_module.module.aws_vpc.aws_internet_gateway.this",
            "module.VPC_module.module.aws_vpc.aws_nat_gateway.this",
            "module.VPC_module.module.aws_vpc.aws_network_acl.database",
            "module.VPC_module.module.aws_vpc.aws_network_acl.elasticache",
            "module.VPC_module.module.aws_vpc.aws_network_acl.intra",
            "module.VPC_module.module.aws_vpc.aws_network_acl.outpost",
            "module.VPC_module.module.aws_vpc.aws_network_acl.private",
            "module.VPC_module.module.aws_vpc.aws_network_acl.public",
            "module.VPC_module.module.aws_vpc.aws_network_acl.redshift",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.database_inbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.database_outbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.elasticache_inbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.elasticache_outbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.intra_inbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.intra_outbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.outpost_inbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.outpost_outbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.private_inbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.private_outbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.public_inbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.public_outbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.redshift_inbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.redshift_outbound",
            "module.VPC_module.module.aws_vpc.aws_redshift_subnet_group.redshift",
            "module.VPC_module.module.aws_vpc.aws_route.database_internet_gateway",
            "module.VPC_module.module.aws_vpc.aws_route.database_ipv6_egress",
            "module.VPC_module.module.aws_vpc.aws_route.database_nat_gateway",
            "module.VPC_module.module.aws_vpc.aws_route.private_ipv6_egress",
            "module.VPC_module.module.aws_vpc.aws_route.private_nat_gateway",
            "module.VPC_module.module.aws_vpc.aws_route.public_internet_gateway",
            "module.VPC_module.module.aws_vpc.aws_route.public_internet_gateway_ipv6",
            "module.VPC_module.module.aws_vpc.aws_route_table.database",
            "module.VPC_module.module.aws_vpc.aws_route_table.elasticache",
            "module.VPC_module.module.aws_vpc.aws_route_table.intra",
            "module.VPC_module.module.aws_vpc.aws_route_table.private",
            "module.VPC_module.module.aws_vpc.aws_route_table.public",
            "module.VPC_module.module.aws_vpc.aws_route_table.redshift",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.database",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.elasticache",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.intra",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.outpost",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.private",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.public",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.redshift",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.redshift_public",
            "module.VPC_module.module.aws_vpc.aws_subnet.database",
            "module.VPC_module.module.aws_vpc.aws_subnet.elasticache",
            "module.VPC_module.module.aws_vpc.aws_subnet.intra",
            "module.VPC_module.module.aws_vpc.aws_subnet.outpost",
            "module.VPC_module.module.aws_vpc.aws_subnet.private",
            "module.VPC_module.module.aws_vpc.aws_subnet.public",
            "module.VPC_module.module.aws_vpc.aws_subnet.redshift",
            "module.VPC_module.module.aws_vpc.aws_vpc.this",
            "module.VPC_module.module.aws_vpc.aws_vpc_dhcp_options.this",
            "module.VPC_module.module.aws_vpc.aws_vpc_dhcp_options_association.this",
            "module.VPC_module.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.VPC_module.module.aws_vpc.aws_vpn_gateway.this",
            "module.VPC_module.module.aws_vpc.aws_vpn_gateway_attachment.this",
            "module.VPC_module.module.aws_vpc.aws_vpn_gateway_route_propagation.intra",
            "module.VPC_module.module.aws_vpc.aws_vpn_gateway_route_propagation.private",
            "module.VPC_module.module.aws_vpc.aws_vpn_gateway_route_propagation.public",
            "module.VPC_module.module.aws_vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.VPC_module.module.aws_vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.bastion_module.aws_instance.bastion",
            "module.iam_module.aws_iam_instance_profile.bastion_profile",
            "module.iam_module.aws_iam_policy_attachment.EC2_role_for_ssm",
            "module.iam_module.aws_iam_policy_attachment.ssm_managed_instance_core",
            "module.iam_module.aws_iam_role.bastion_role",
            "module.security_groups_module.aws_security_group.Security_Group_bastion",
            "module.security_groups_module.aws_security_group_rule.allow_all_outbound_traffic"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway_module",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-026383e17c653ce80",
            "connectivity_type": "public",
            "id": "nat-06908f67e37bdc453",
            "subnet_id": "subnet-06a56f374416c913d",
            "tags": {
              "name": "private_nat_gateway_default"
            },
            "tags_all": {
              "Environment": "default",
              "Terraform": "true",
              "name": "private_nat_gateway_default"
            }
          },
          "dependencies": [
            "module.VPC_module.module.aws_vpc.aws_cloudwatch_log_group.flow_log",
            "module.VPC_module.module.aws_vpc.aws_customer_gateway.this",
            "module.VPC_module.module.aws_vpc.aws_db_subnet_group.database",
            "module.VPC_module.module.aws_vpc.aws_default_network_acl.this",
            "module.VPC_module.module.aws_vpc.aws_default_route_table.default",
            "module.VPC_module.module.aws_vpc.aws_default_security_group.this",
            "module.VPC_module.module.aws_vpc.aws_default_vpc.this",
            "module.VPC_module.module.aws_vpc.aws_egress_only_internet_gateway.this",
            "module.VPC_module.module.aws_vpc.aws_eip.nat",
            "module.VPC_module.module.aws_vpc.aws_elasticache_subnet_group.elasticache",
            "module.VPC_module.module.aws_vpc.aws_flow_log.this",
            "module.VPC_module.module.aws_vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.VPC_module.module.aws_vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.VPC_module.module.aws_vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.VPC_module.module.aws_vpc.aws_internet_gateway.this",
            "module.VPC_module.module.aws_vpc.aws_nat_gateway.this",
            "module.VPC_module.module.aws_vpc.aws_network_acl.database",
            "module.VPC_module.module.aws_vpc.aws_network_acl.elasticache",
            "module.VPC_module.module.aws_vpc.aws_network_acl.intra",
            "module.VPC_module.module.aws_vpc.aws_network_acl.outpost",
            "module.VPC_module.module.aws_vpc.aws_network_acl.private",
            "module.VPC_module.module.aws_vpc.aws_network_acl.public",
            "module.VPC_module.module.aws_vpc.aws_network_acl.redshift",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.database_inbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.database_outbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.elasticache_inbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.elasticache_outbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.intra_inbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.intra_outbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.outpost_inbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.outpost_outbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.private_inbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.private_outbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.public_inbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.public_outbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.redshift_inbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.redshift_outbound",
            "module.VPC_module.module.aws_vpc.aws_redshift_subnet_group.redshift",
            "module.VPC_module.module.aws_vpc.aws_route.database_internet_gateway",
            "module.VPC_module.module.aws_vpc.aws_route.database_ipv6_egress",
            "module.VPC_module.module.aws_vpc.aws_route.database_nat_gateway",
            "module.VPC_module.module.aws_vpc.aws_route.private_ipv6_egress",
            "module.VPC_module.module.aws_vpc.aws_route.private_nat_gateway",
            "module.VPC_module.module.aws_vpc.aws_route.public_internet_gateway",
            "module.VPC_module.module.aws_vpc.aws_route.public_internet_gateway_ipv6",
            "module.VPC_module.module.aws_vpc.aws_route_table.database",
            "module.VPC_module.module.aws_vpc.aws_route_table.elasticache",
            "module.VPC_module.module.aws_vpc.aws_route_table.intra",
            "module.VPC_module.module.aws_vpc.aws_route_table.private",
            "module.VPC_module.module.aws_vpc.aws_route_table.public",
            "module.VPC_module.module.aws_vpc.aws_route_table.redshift",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.database",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.elasticache",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.intra",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.outpost",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.private",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.public",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.redshift",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.redshift_public",
            "module.VPC_module.module.aws_vpc.aws_subnet.database",
            "module.VPC_module.module.aws_vpc.aws_subnet.elasticache",
            "module.VPC_module.module.aws_vpc.aws_subnet.intra",
            "module.VPC_module.module.aws_vpc.aws_subnet.outpost",
            "module.VPC_module.module.aws_vpc.aws_subnet.private",
            "module.VPC_module.module.aws_vpc.aws_subnet.public",
            "module.VPC_module.module.aws_vpc.aws_subnet.redshift",
            "module.VPC_module.module.aws_vpc.aws_vpc.this",
            "module.VPC_module.module.aws_vpc.aws_vpc_dhcp_options.this",
            "module.VPC_module.module.aws_vpc.aws_vpc_dhcp_options_association.this",
            "module.VPC_module.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.VPC_module.module.aws_vpc.aws_vpn_gateway.this",
            "module.VPC_module.module.aws_vpc.aws_vpn_gateway_attachment.this",
            "module.VPC_module.module.aws_vpc.aws_vpn_gateway_route_propagation.intra",
            "module.VPC_module.module.aws_vpc.aws_vpn_gateway_route_propagation.private",
            "module.VPC_module.module.aws_vpc.aws_vpn_gateway_route_propagation.public",
            "module.VPC_module.module.aws_vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.VPC_module.module.aws_vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.bastion_module.aws_instance.bastion",
            "module.iam_module.aws_iam_instance_profile.bastion_profile",
            "module.iam_module.aws_iam_policy_attachment.EC2_role_for_ssm",
            "module.iam_module.aws_iam_policy_attachment.ssm_managed_instance_core",
            "module.iam_module.aws_iam_role.bastion_role",
            "module.nat_gateway_module.aws_eip.bastionEIP",
            "module.security_groups_module.aws_security_group.Security_Group_bastion",
            "module.security_groups_module.aws_security_group_rule.allow_all_outbound_traffic"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Security_Group_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:072026222177:security-group/sg-06b5d5b416e44a674",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-06b5d5b416e44a674",
            "ingress": [],
            "name": "security-group-bastion",
            "name_prefix": "",
            "owner_id": "072026222177",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security_group_bastion_default"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "security_group_bastion_default",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-070dd296fe3fbcd50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC_module.module.aws_vpc.aws_cloudwatch_log_group.flow_log",
            "module.VPC_module.module.aws_vpc.aws_customer_gateway.this",
            "module.VPC_module.module.aws_vpc.aws_db_subnet_group.database",
            "module.VPC_module.module.aws_vpc.aws_default_network_acl.this",
            "module.VPC_module.module.aws_vpc.aws_default_route_table.default",
            "module.VPC_module.module.aws_vpc.aws_default_security_group.this",
            "module.VPC_module.module.aws_vpc.aws_default_vpc.this",
            "module.VPC_module.module.aws_vpc.aws_egress_only_internet_gateway.this",
            "module.VPC_module.module.aws_vpc.aws_eip.nat",
            "module.VPC_module.module.aws_vpc.aws_elasticache_subnet_group.elasticache",
            "module.VPC_module.module.aws_vpc.aws_flow_log.this",
            "module.VPC_module.module.aws_vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.VPC_module.module.aws_vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.VPC_module.module.aws_vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.VPC_module.module.aws_vpc.aws_internet_gateway.this",
            "module.VPC_module.module.aws_vpc.aws_nat_gateway.this",
            "module.VPC_module.module.aws_vpc.aws_network_acl.database",
            "module.VPC_module.module.aws_vpc.aws_network_acl.elasticache",
            "module.VPC_module.module.aws_vpc.aws_network_acl.intra",
            "module.VPC_module.module.aws_vpc.aws_network_acl.outpost",
            "module.VPC_module.module.aws_vpc.aws_network_acl.private",
            "module.VPC_module.module.aws_vpc.aws_network_acl.public",
            "module.VPC_module.module.aws_vpc.aws_network_acl.redshift",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.database_inbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.database_outbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.elasticache_inbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.elasticache_outbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.intra_inbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.intra_outbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.outpost_inbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.outpost_outbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.private_inbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.private_outbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.public_inbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.public_outbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.redshift_inbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.redshift_outbound",
            "module.VPC_module.module.aws_vpc.aws_redshift_subnet_group.redshift",
            "module.VPC_module.module.aws_vpc.aws_route.database_internet_gateway",
            "module.VPC_module.module.aws_vpc.aws_route.database_ipv6_egress",
            "module.VPC_module.module.aws_vpc.aws_route.database_nat_gateway",
            "module.VPC_module.module.aws_vpc.aws_route.private_ipv6_egress",
            "module.VPC_module.module.aws_vpc.aws_route.private_nat_gateway",
            "module.VPC_module.module.aws_vpc.aws_route.public_internet_gateway",
            "module.VPC_module.module.aws_vpc.aws_route.public_internet_gateway_ipv6",
            "module.VPC_module.module.aws_vpc.aws_route_table.database",
            "module.VPC_module.module.aws_vpc.aws_route_table.elasticache",
            "module.VPC_module.module.aws_vpc.aws_route_table.intra",
            "module.VPC_module.module.aws_vpc.aws_route_table.private",
            "module.VPC_module.module.aws_vpc.aws_route_table.public",
            "module.VPC_module.module.aws_vpc.aws_route_table.redshift",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.database",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.elasticache",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.intra",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.outpost",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.private",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.public",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.redshift",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.redshift_public",
            "module.VPC_module.module.aws_vpc.aws_subnet.database",
            "module.VPC_module.module.aws_vpc.aws_subnet.elasticache",
            "module.VPC_module.module.aws_vpc.aws_subnet.intra",
            "module.VPC_module.module.aws_vpc.aws_subnet.outpost",
            "module.VPC_module.module.aws_vpc.aws_subnet.private",
            "module.VPC_module.module.aws_vpc.aws_subnet.public",
            "module.VPC_module.module.aws_vpc.aws_subnet.redshift",
            "module.VPC_module.module.aws_vpc.aws_vpc.this",
            "module.VPC_module.module.aws_vpc.aws_vpc_dhcp_options.this",
            "module.VPC_module.module.aws_vpc.aws_vpc_dhcp_options_association.this",
            "module.VPC_module.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.VPC_module.module.aws_vpc.aws_vpn_gateway.this",
            "module.VPC_module.module.aws_vpc.aws_vpn_gateway_attachment.this",
            "module.VPC_module.module.aws_vpc.aws_vpn_gateway_route_propagation.intra",
            "module.VPC_module.module.aws_vpc.aws_vpn_gateway_route_propagation.private",
            "module.VPC_module.module.aws_vpc.aws_vpn_gateway_route_propagation.public",
            "module.VPC_module.module.aws_vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.VPC_module.module.aws_vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups_module",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_outbound_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1134415222",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-06b5d5b416e44a674",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC_module.module.aws_vpc.aws_cloudwatch_log_group.flow_log",
            "module.VPC_module.module.aws_vpc.aws_customer_gateway.this",
            "module.VPC_module.module.aws_vpc.aws_db_subnet_group.database",
            "module.VPC_module.module.aws_vpc.aws_default_network_acl.this",
            "module.VPC_module.module.aws_vpc.aws_default_route_table.default",
            "module.VPC_module.module.aws_vpc.aws_default_security_group.this",
            "module.VPC_module.module.aws_vpc.aws_default_vpc.this",
            "module.VPC_module.module.aws_vpc.aws_egress_only_internet_gateway.this",
            "module.VPC_module.module.aws_vpc.aws_eip.nat",
            "module.VPC_module.module.aws_vpc.aws_elasticache_subnet_group.elasticache",
            "module.VPC_module.module.aws_vpc.aws_flow_log.this",
            "module.VPC_module.module.aws_vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.VPC_module.module.aws_vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.VPC_module.module.aws_vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.VPC_module.module.aws_vpc.aws_internet_gateway.this",
            "module.VPC_module.module.aws_vpc.aws_nat_gateway.this",
            "module.VPC_module.module.aws_vpc.aws_network_acl.database",
            "module.VPC_module.module.aws_vpc.aws_network_acl.elasticache",
            "module.VPC_module.module.aws_vpc.aws_network_acl.intra",
            "module.VPC_module.module.aws_vpc.aws_network_acl.outpost",
            "module.VPC_module.module.aws_vpc.aws_network_acl.private",
            "module.VPC_module.module.aws_vpc.aws_network_acl.public",
            "module.VPC_module.module.aws_vpc.aws_network_acl.redshift",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.database_inbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.database_outbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.elasticache_inbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.elasticache_outbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.intra_inbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.intra_outbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.outpost_inbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.outpost_outbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.private_inbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.private_outbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.public_inbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.public_outbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.redshift_inbound",
            "module.VPC_module.module.aws_vpc.aws_network_acl_rule.redshift_outbound",
            "module.VPC_module.module.aws_vpc.aws_redshift_subnet_group.redshift",
            "module.VPC_module.module.aws_vpc.aws_route.database_internet_gateway",
            "module.VPC_module.module.aws_vpc.aws_route.database_ipv6_egress",
            "module.VPC_module.module.aws_vpc.aws_route.database_nat_gateway",
            "module.VPC_module.module.aws_vpc.aws_route.private_ipv6_egress",
            "module.VPC_module.module.aws_vpc.aws_route.private_nat_gateway",
            "module.VPC_module.module.aws_vpc.aws_route.public_internet_gateway",
            "module.VPC_module.module.aws_vpc.aws_route.public_internet_gateway_ipv6",
            "module.VPC_module.module.aws_vpc.aws_route_table.database",
            "module.VPC_module.module.aws_vpc.aws_route_table.elasticache",
            "module.VPC_module.module.aws_vpc.aws_route_table.intra",
            "module.VPC_module.module.aws_vpc.aws_route_table.private",
            "module.VPC_module.module.aws_vpc.aws_route_table.public",
            "module.VPC_module.module.aws_vpc.aws_route_table.redshift",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.database",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.elasticache",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.intra",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.outpost",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.private",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.public",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.redshift",
            "module.VPC_module.module.aws_vpc.aws_route_table_association.redshift_public",
            "module.VPC_module.module.aws_vpc.aws_subnet.database",
            "module.VPC_module.module.aws_vpc.aws_subnet.elasticache",
            "module.VPC_module.module.aws_vpc.aws_subnet.intra",
            "module.VPC_module.module.aws_vpc.aws_subnet.outpost",
            "module.VPC_module.module.aws_vpc.aws_subnet.private",
            "module.VPC_module.module.aws_vpc.aws_subnet.public",
            "module.VPC_module.module.aws_vpc.aws_subnet.redshift",
            "module.VPC_module.module.aws_vpc.aws_vpc.this",
            "module.VPC_module.module.aws_vpc.aws_vpc_dhcp_options.this",
            "module.VPC_module.module.aws_vpc.aws_vpc_dhcp_options_association.this",
            "module.VPC_module.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.VPC_module.module.aws_vpc.aws_vpn_gateway.this",
            "module.VPC_module.module.aws_vpc.aws_vpn_gateway_attachment.this",
            "module.VPC_module.module.aws_vpc.aws_vpn_gateway_route_propagation.intra",
            "module.VPC_module.module.aws_vpc.aws_vpn_gateway_route_propagation.private",
            "module.VPC_module.module.aws_vpc.aws_vpn_gateway_route_propagation.public",
            "module.VPC_module.module.aws_vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.VPC_module.module.aws_vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.security_groups_module.aws_security_group.Security_Group_bastion"
          ]
        }
      ]
    }
  ]
}